// Copyright 2020 Eryx <evorui аt gmail dοt com>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package hrpc;

message ReqMeta {
	string full_method = 1;
	uint64 req_id = 3;
	int64 req_time = 4;
	int32 body_size = 5;
	int32 body_compress_type = 6;
	string auth_access_key = 7;
	bytes auth_data = 8;
}

message RepMeta {
	int32 error_code = 1;
	string error_message = 2;
	uint64 req_id = 3;
	int64 rep_time = 4;
	int32 body_size = 5;
	int32 body_compress_type = 6;
}
